# diaria-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  cliff.toml  hk.pkl  mise.toml  opencode.json  release-please-config.json  todo.md
.github/workflows/: aur.yml  ci.yml  pacman.yml  release-please.yml  release.yml
docs/design/: add-entry-recovery.md
end_to_end/: CMakeLists.txt  helper.py  test_dump_load.py  test_empty_entry.py  test_find_executable.py  test_git_sync.py  test_init_db.py  test_new_entries.py  test_old_entries.py  test_stats_basic.py  test_status.py  test_write_read.py
end_to_end/entry_data/: eternal.diaria  key.key  key.pub  key.sym  long.diaria
end_to_end/entry_data_v1/: eternal.txt  key.key  key.pub  key.sym
end_to_end/entry_data_v1/entries/: eternal.diaria  long.diaria
end_to_end/error_conditions/: test_add_failures.py  test_wrong_input.py  test_wrong_password.py
src/: commands.rs  crypto.rs  di.rs  environment.rs  file_loader.rs  main.rs  manifest.rs  password.rs  stdout_printer.rs
src/commands/: add.rs  dump.rs  init.rs  load.rs  read.rs  stats.rs  status.rs  summarize.rs  sync.rs
src/commands/snapshots/: diaria__commands__stats__tests__stats_snapshot_multi_year.snap
src/commands/stats/: heatmap.rs  index.rs  mod.rs  render.rs
src/commands/stats/snapshots/: diaria__commands__stats__tests__stats_snapshot_multi_year.snap
src/commands/testdata/: key.key  key.pub  key.sym
src/commands/testdata/entries/: 2026-06-21T16:50:46.diaria
src/entry/: key_manager.rs  mod.rs  repository.rs  version01.rs
src/util/: dialogue_editor.rs  entry_selector.rs  file_loader.rs  git_runner.rs  mod.rs  password.rs  stdout_printer.rs
tools/: agent-sandbox.sh  release-tag.sh
