[package]
name = "diaria"
version = "0.1.0"
edition = "2024"

[dependencies]
chacha20poly1305 = { version = "=0.11.0-rc.3", features = ["rand_core", "zeroize"] }
x448 = "0.14.0-pre.10"
hkdf = "0.13"
sha2 = { version = "0.11.0", features = ["zeroize"] }
hex-literal = "1.1.0"
thiserror = "2.0"
clap = { version = "4.6", features = ["cargo", "derive"] }
chrono = "0.4"
xdg = "3"
brotli = { version = "8.0.4", features = ["validation"] }
dialoguer = { version = "0.12.0", features = ["fuzzy-matcher", "fuzzy-select", "password"] }
rand = "0.10.1"
argon2 = { version = "0.5", features = ["std"] }
