[package]
name = "diaria"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
brotli = { version = "8.0.4", features = ["validation"] }
chacha20poly1305 = { version = "=0.11.0-rc.3", features = ["rand_core", "zeroize"] }
chrono = "0.4"
clap = { version = "4.6", features = ["cargo", "derive"] }
colorgrad = "0.8.0"
dialoguer = { version = "0.12.0", features = ["fuzzy-matcher", "fuzzy-select", "password"] }
hex-literal = "1.1.0"
hkdf = "0.13"
mockall = "0.14.0"
rand = "0.10.1"
sha2 = { version = "0.11.0", features = ["zeroize"] }
thiserror = "2.0"
x448 = "0.14.0-pre.10"
xdg = "3"
