[package]
name = "diaria"
version = "1.2.0"
edition = "2024"
license = "MIT"
description = "An encrypted, plain-text command-line diary"
repository = "https://github.com/corrodedHash/diaria-rs"
keywords = ["diary", "encrypted", "cli"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
brotli = { version = "8.0.4", features = ["validation"] }
chacha20poly1305 = { version = "=0.11.0-rc.3", features = ["rand_core", "zeroize"] }
chrono = "0.4"
clap = { version = "4.6", features = ["cargo", "derive"] }
colorgrad = "0.8.0"
dialoguer = { version = "0.12.0", features = ["fuzzy-matcher", "fuzzy-select", "password"] }
hex-literal = "1.1.0"
hkdf = "0.13"
mockall = "0.14.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = { version = "0.11.0", features = ["zeroize"] }
thiserror = "2.0"
toml = "1.1.2"
x448 = "0.14.0-pre.10"
xdg = "3"
zeroize = { version = "1.8", features = ["alloc"] }

[dev-dependencies]
insta = { version = "1.42" }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Intentional: crypto date/year math and color-computation casts.
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"

# Transitive dependency version mismatches we can't resolve from here.
multiple_crate_versions = "allow"

# Generated by mockall::automock — we can't control the generated code.
struct_field_names = "allow"

# Commands follow a consistent execute() -> Result pattern even when
# they never fail; diverging would make the codebase less uniform.
unnecessary_wraps = "allow"

# Restriction lints — enforced at deny level.
print_stdout = "deny"
print_stderr = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
exit = "deny"
indexing_slicing = "deny"
as_conversions = "deny"
shadow_reuse = "deny"
shadow_unrelated = "deny"

[profile.release]
# Strip symbols from release binaries — smaller artifacts, cross-target safe.
strip = true
